<resources>
    <string name="app_name">BreckWorld</string>
    <string name="no_network_error">No internet</string>
    <string name="general_error_handler_server_error">Server error. Pleasy try again</string>
    <string name="general_error_handler_unknown_error">Oops! Something wrong. Please try later</string>
    <string name="general_error_validation_errors">Validation fields error</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="arview">AR View</string>
    <string name="stars">Stars</string>
    <string name="wallet">Wallet</string>
    <string name="latitude">Latitude: %.7f</string>
    <string name="longitude">Longitude: %.7f</string>
    <string name="accuracy">Accuracy: %.7f</string>
    <string name="altitude">Altitude: %.7f</string>
    <string name="bearing">Bearing: %.7f</string>
    <string name="bearing_to_marker">Bearing to Marker: %.7f</string>
    <string name="distance">Distance: %.7f</string>
    <string name="current_marker">Current Marker: %s</string>
    <string name="towns_title">360 Towns</string>
    <string name="fun_title">360 Fun</string>
    <string name="use_search">Use Search 🔎 to find more</string>
    <string name="experience">Experience</string>
    <string name="website">Website</string>
    <string name="great_job">Great job!</string>
    <string name="see_collected_stars">See collected stars</string>
    <string name="select_special_offer">Select your special offer</string>
    <string name="select_special_offer2">Select a special offer</string>
    <string name="you_can_find_all_your_stars">You can find all your stars and level status under Profile</string>
    <string name="ten_star_collected">Wow, %dth star!</string>
    <plurals name="collected_star">
        <item quantity="one">You just collected your %1$dth star at\n%2$s</item>
        <item quantity="other">You just collected your %1$dth star at\n%2$s</item>
    </plurals>
    <string name="add_offer_to_wallet">Add offer to wallet</string>
    <string name="google_maps_key">AIzaSyBpXmiyUph0juOzWRhkHBUM7hGqRU2Vq_Y</string>
    <string name="onboard_description">This is Breckworld! If you have an account please Login, if not Sign Up. Time for
        some fun!
    </string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="welcome_back">Welcome back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account_or_login">Create account or Login?</string>
    <string name="sign_up_description">Join BreckWorld and reach for the Stars! Collect Stars and Offers!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register_success">Register Success</string>
    <string name="login_success">Login Success</string>
    <string name="terms_of_service_description">1. Use of the App\nBy downloading or using this App, these terms will automatically apply to you. You should make sure that you have read them carefully before doing so. If you do not agree to these terms you must not download or use the App. You may want to print a copy of these terms for your reference.\nYou are also responsible for ensuring that all persons who use or access the App through your internet connection or your device(s) are aware of these terms and the other applicable terms described in clause 2, and that they comply with them.\nIntellectual property rights in or arising from this App and its contents belong to Viewing Online Limited (“the Company”). Use of the App and its contents is limited to your private and non-commercial use purposes only and you must not be further exploit without prior written permission of the Company.\n2. Other applicable terms\nThese terms are supplemented by the Company’s Privacy Policy.\n3. Changes to these terms of use\nThe Company is committed to ensuring that this App is useful and efficient as possible. For that reason, it reserves the right to make changes to the App or withdraw the App, at any time and for any reason.\nThe Company may amend these terms from time to time. Please check these terms regularly to ensure you understand the terms that apply at that time. If you access the App after the Company has made changes to the terms you will be treated as having accepted the change.\n4. Accuracy of Content\nThe App and content is provided for your general information only and the Company gives no guarantees or warranties that it is accurate, complete, up to date nor that it will always be available, be uninterrupted or error free. It is not intended to amount to advice.\nAlthough the Company make reasonable efforts to update the information on its app, the Company makes no representations, warranties or guarantees, whether express or implied that the content on our App is accurate, complete or up-to-date.\nThe content of any services featured in the App are subject to change at any time without notice.\n5. Location Settings\nYou agree to receive pre-programmed notifications on the App if you have turned on locational services on your devices.\n6. Liability\nNothing in these terms shall exclude the Company’s liability where it would be unlawful to do so. This includes the Company’s liability for death or personal injury caused by its negligence or for fraud.\nThe Company shall not be liable for any acts or omissions of any third parties howsoever caused.\nThe Company will not be liable directly, indirectly, incidentally, specially, consequentially or punitively for damages, howsoever caused, resulting from or in connection with the App and any services offered in the App, your access to, use of or inability to use the App, reliance on or downloading from the App, or any delays, inaccuracies in the information or in its transmission, including, without limitation, theft of your device or information or corruption of your information, the inability to use the App, device failure or malfunction.\nThe Company will not be liable for any loss or damage caused by a virus or other technologically harmful material that may infect your device.\nYou must not:\nintroduce any virus to the App;\nin any way attempt to access, alter, de-compile, otherwise interfere with any part of the App.\nuse the App for any unlawful purpose.\nI wish to participate in the App. I understand that there are risks and dangers inherent in participating in walks using this APP.\nI hereby assume all of the risks associated with this APP and to release and hold harmless Viewing Online Limited and Breckland District Council.\nI understand and agree that these terms are binding on my heirs, assigns, next of kin, executors and administrators and legal representatives.\nI certify that I am physically fit and have no health related reasons or problems to preclude my use of the App. I certify that I have not been advised otherwise by a qualified medical person. I understand that I am solely responsible for my health and safety, and I acknowledge that I am physically capable of participating in this activity. This App is designed to be used outdoors, I understand that I will remain aware of the environment I am in and avoid going into inappropriate areas or an area where I am not permitted to be.\n7. Applicable law\nThese terms shall be governed by the laws of England and you and the Company submit to the exclusive jurisdiction of the courts of England to resolve any dispute between you that may arise as a result of these terms or arising out of or in connection with the use of the App.\n8. Safety\nYour safety is of paramount importance to both Breckland District Council and Viewing Online Ltd. It is vital that you stay alert to your surroundings when collecting augmented items in AR View mode. Never look at your phone when crossing roads or when in the vicinity of any potential obstacles that could impact yours or others’ safety. Breckland District Council and Viewing Online Ltd take no responsibility for injury or death associated with usage of the BreckWorld app. Breckland District Council and Viewing Online Ltd also take no responsibility for injury or death associated with using the BreckWorld app in conjunction with a VR Headset/Head Mounted Display (HMD). We urge all users to stay safe and be vigilant while using the BreckWorld app. If you do, you’ll have a fantastic experience.\n9. Special Offer Participating Businesses\nFor every 10 stars that you collect using the BreckWorld app, you will be provided with a list of Special Offers to choose from.\nThese can range from 10% - 50% off entry to local attractions or be discounts for restaurants around Breckland. Simply choose whichever Special Offer works best for you and redeem it on the day you visit.\nIt is important to note that, as a charity trying to generate maximum revenue to help the animals they care for and protect, Banham Zoo are NOT participating in Special Offers. Please do still visit this amazing attraction for a fantastic day out while helping the animals you’ll see there.\n10. Compatibility\nAR View mode is only compatible with iPhone 6s and later released iPhone models. Users can still enjoy the app and virtually explore BreckWorld 360 Experiences on iPhone models earlier than iPhone 6s but may not be able to enjoy the AR View mode features including treasure hunt and floating offers located down Breckland’s High Streets. Breckland District Council and Viewing Online Ltd take no responsibility for any emotional, physical or financial damage related to usage of the BreckWorld app.\nI certify that I have read these terms and fully understand their content. If I am 18 years or younger at the time of participating, my parent or legal guardian has completely reviewed these terms, understands and consents to them and authorises my participation by agreeing to them.</string>
    <string name="settings">Settings</string>
    <string name="start_tutorial">Start Tutorial</string>
    <string name="report_issue">Report Issue</string>
    <string name="welcome_back_to_breckworld">Welcome back to BreckWorld!</string>
    <string name="login_to_your_existing_account_of_breckworld">Login to your existing account of BreckWorld.</string>
    <string name="next">Next</string>
    <string name="email_address">Email address</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? <b>Register here</b></string>
    <string name="welcome_to_breckworld">Welcome to BreckWorld!</string>
    <string name="please_create_your_account_to_start_the_fun">Please create your account to start the fun</string>
    <string name="last_name_">Last name</string>
    <string name="first_name_">First name</string>
    <string name="already_have_an_account_login_here">Already have an account? <b>Login here</b></string>
    <string name="app_intro">App Intro</string>
    <string name="skip_intro">skip intro</string>
</resources>