<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_arview"
        android:enabled="true"
        android:icon="@drawable/ic_eye"
        android:title="@string/arview"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stars"
        android:enabled="true"
        android:icon="@drawable/ic_star"
        android:title="@string/stars"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_wallet"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/wallet"
        app:showAsAction="ifRoom" />

</menu>