<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.breckworld.ui.main.settings.SettingsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:descendantFocusability="beforeDescendants"
            android:background="@color/colorWhite">

        <TextView
                android:id="@+id/text_view_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/colorDarkGreen"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/settings"
                app:lineHeight="32sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

        <TextView
                android:id="@+id/text_view_terms_of_service"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:layout_marginTop="80dp"
                android:paddingEnd="16dp"
                android:textSize="18sp"
                android:onClick="@{()->viewModel.onTermsOfService()}"
                android:background="@drawable/ripple_bg_white_bottom_line_silver"
                android:textColor="@color/colorWoodsmoke"
                android:text="@string/terms_of_service"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/ic_triangle_green"
                android:drawablePadding="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_view_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/text_view_privacy_policy"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:paddingEnd="16dp"
                android:textSize="18sp"
                android:onClick="@{()->viewModel.onPrivacyPolicy()}"
                android:background="@drawable/ripple_bg_white_bottom_line_silver"
                android:textColor="@color/colorWoodsmoke"
                android:text="@string/privacy_policy"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/ic_triangle_green"
                android:drawablePadding="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_view_terms_of_service"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/text_view_start_tutorial"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:paddingEnd="16dp"
                android:textSize="18sp"
                android:onClick="@{()->viewModel.onStartTutorial()}"
                android:background="@drawable/ripple_bg_white_bottom_line_silver"
                android:textColor="@color/colorWoodsmoke"
                android:text="@string/start_tutorial"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/ic_triangle_green"
                android:drawablePadding="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_view_privacy_policy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/text_view_report_issue"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:paddingEnd="16dp"
                android:textSize="18sp"
                android:onClick="@{()->viewModel.onReportIssue()}"
                android:background="@drawable/ripple_bg_white_bottom_line_silver"
                android:textColor="@color/colorWoodsmoke"
                android:text="@string/report_issue"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/ic_triangle_green"
                android:drawablePadding="4dp"
                app:layout_constraintTop_toBottomOf="@+id/text_view_start_tutorial"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>